--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ coverage==7.8.0
 fake-bpy-module-latest==20250520
 ffmpeg-python==0.2.0
 future==1.0.0
+pastel==0.2.1
 piexif==1.1.3
 pillow==11.2.1
+poethepoet==0.34.0
+PyYAML==6.0.2
