--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ help = "Install all project dependencies."
 sequence = ["install-butils", "install-githooks", "install-blender", "install-ffmpeg"]
 
 [tool.poe.tasks.test]
-help = "Run unit tests."
+help = "Run unit tests. Add -t tests.<test_file> to run specific tests."
+cwd = "$POE_PWD"
 cmd = "blender --background --python tests/run_tests.py -- --no-buffer --verbosity 2"
 
 [tool.poe.tasks.blend]
