--- a/.github/workflows/blender_tests.yml
+++ b/.github/workflows/blender_tests.yml
@@ -2,9 +2,9 @@ name: Blender Tests
 
 on:
   push:
-    branches: [main]
+    branches: ["*"]
   pull_request:
-    branches: [main]
+    branches: ["main"]
   workflow_dispatch:
     inputs:
       testcase: { type: string }
