--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,54 @@
+[project]
+name = "butils"
+version = "0.1.0"
+description = "A collection of Blender scripts and utilities"
+readme = "README.md"
+authors = [{name = "Jordan Blakey", email = "jordan.t.blakey@gmail.com"}]
+requires-python = ">=3.12"
+classifiers = [ "Topic :: Software Development :: Libraries :: Python Modules" ]
+[virtualenvs]
+path = ".venvs"
+create = false
+in-project = true
+dependencies = [
+    "blender-stubs (>=3.12.27,<4.0.0)",
+    "fake-bpy-module-latest (>=20250522,<20250523)",
+    "coverage (>=7.8.2,<8.0.0)",
+    "ffmpeg-python (>=0.2.0,<0.3.0)",
+    "future (>=1.0.0,<2.0.0)",
+    "pastel (>=0.2.1,<0.3.0)",
+    "piexif (>=1.1.3,<2.0.0)",
+    "pillow (>=11.2.1,<12.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)"
+]
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.11.12"
+poethepoet = "^0.34.0"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.coverage.run]
+source = ["butils"]
+omit = [
+    "butils/btyping/*",
+    "tests/*",
+    "*/site-packages/*",
+    "*/scripts/modules/bpy/*",
+]
+
 [tool.poe.tasks.default]
 help = "Show available poe tasks"
 cmd = "poe -h"
 
 [tool.poe.tasks.install]
-help = "Install all project dependencies."
-sequence = [
-  "install-butils",
-  "install-githooks",
-  "install-blender",
-  "install-ffmpeg",
-  "install-act",
-]
+help = "Check venv, install py & external deps, install & test githooks."
+cmd = "scripts/install.sh"
 
-[tool.poe.tasks]
-install-butils = "python -m butils install"
-install-githooks = "rsync -av tests/githooks/ .git/hooks/"
-install-blender = "sudo snap install blender"
-install-ffmpeg = "sudo apt install ffmpeg"
-install-act = "./butils/commands/install/act.sh"
-
-[tool.poe.tasks.act]
-help = "Run unit tests. Add --input 'testcase=test.Case.function' to run specific tests."
+[tool.poe.tasks.test]
+help = "Run unit tests using act. `poe test --input 'testcase=test.Case.function'"
 cwd = "$POE_PWD"
 cmd = """
   act workflow_dispatch
@@ -55,9 +83,3 @@ cwd = "$POE_PWD"
 cmd = "python -m butils compress"
 
 
-[tool.coverage.run]
-# choose what to run coverage against
-# source = ["butils"]
-
-# or choose what to omit
-omit = ["*/scripts/modules/bpy/*", "tests/*"]
