--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pastel = "^0.2.1"
 piexif = "^1.1.3"
 pillow = "^11.2.1"
 pyyaml = "^6.0.2"
+colorama = "^0.4.6"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.12"
