--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ ruff = "^0.11.12"
 poethepoet = "^0.34.0"
 pymarkdownlnt = "^0.9.16"
 mdformat = "^0.7.17"
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
