--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,6 +57,7 @@ repos:
     rev: v1.37.1
     hooks:
       - id: yamllint
+        exclude: ".github/workflows"
 
   - repo: https://github.com/rhysd/actionlint
     rev: v1.7.7
