--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
       - id: check-toml
       - id: check-vcs-permalinks
       - id: check-added-large-files
+        args: ["--maxkb=10000"]
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
