--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,11 +16,11 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
-  - repo: https://github.com/boidolr/pre-commit-images
-    rev: v1.8.4
-    hooks:
-      - id: optimize-jpg
-      - id: optimize-png
+  # - repo: https://github.com/boidolr/pre-commit-images
+  #   rev: v1.8.4
+  #   hooks:
+  #     - id: optimize-jpg
+  #     - id: optimize-png
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
