--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ experiments/30_*/renders/donut_anim*
 experiments/30_*/renders/render*
 experiments/30_*/renders/viewport*
 experiments/30_*/part*.blend
+
+# theme files
+# experiments/31_*/themes/*.{xml,toml}
