--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,10 +33,10 @@ repos:
       - id: python-use-type-annotations
       - id: text-unicode-replacement-char
 
-  - repo: https://github.com/crate-ci/typos
-    rev: v1.33.1
-    hooks:
-      - id: typos
+  # - repo: https://github.com/crate-ci/typos
+  #   rev: v1.33.1
+  #   hooks:
+  #     - id: typos
 
   - repo: https://github.com/thlorenz/doctoc
     rev: v2.2.0
